# automatic-spike-detector

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg
docs/: requirements.txt
docs/source/: conf.py  index.rst
spidet/: plotting.py  spike_detection_pipeline.py  test_line_length.py  test_preprocessing.py
spidet/domain/: ActivationFunction.py  BasisFunction.py  CoefficentsFunction.py  DetectedEvent.py  Nmfsc.py  Trace.py
spidet/load/: data_loading.py
spidet/loader/: loader.py
spidet/preprocess/: artiact_detection.py  artifact_detection.py  filtering.py  pipeline.py  preprocessing.py  resampling.py  rescaling.py
spidet/preprocessing/: pipeline.py  rescaling.py
spidet/spike_detection/: clustering.py  line_length.py  nmf.py  nmf_pipeline.py  spike_detection_pipeline.py  thresholding.py
spidet/tests/: test_artifact_detection.py  test_line_length.py  test_spike_detection.py
spidet/utils/: file_utils.py  plotting_utils.py  times_utils.py  variables.py
spikepy/: plotting.py  spike_detection_pipeline.py  test_clustering.py  test_preprocessing.py  test_thresholding.py
spikepy/loader/: loader.py
spikepy/preprocessing/: pipeline.py  (+1 more)
src/: main.py  main_preprocessing.py  nmf_pipeline.py  plotting.py  spike_detection_pipeline.py  test_clustering.py  test_preprocessing.py  test_thresholding.py
tests/: test_artifact_detection.py  test_data_loading.py  test_df_loading.py  test_h_matrix_loading.py  test_line_length.py  test_spike_detection.py  test_thresholding.py  variables.py
(+38 files in other folders)
