[build-system]
requires = ["setuptools>=42", "wheel"]   # PEP 508 specifications.
build-backend = "setuptools.build_meta"

[project]
name = "automatic-spike-detection"
version = "1.2.4"
requires-python = "== 3.10"
description = "Python library for automatically detectiong interictal epileptiform discharges (IEDs) by means of nonnegative matrix factorization (NMF)"
readme = "README.md"
dependencies = [
    "h5py==3.9.0",
    "loguru==0.7.1",
    "matplotlib",
    "mne==1.5.0",
    "mypy-extensions==1.0.0",
    "nimfa==1.4.0",
    "numpy==1.25.2",
    "pandas==2.1.0",
    "scikit-learn==1.3.0",
    "scipy==1.11.2",
    "typing-extensions==4.7.1",
]

[project.optional-dependencies]
dev = ["black==23.7.0", "kiwisolver==1.4.4", "ruff==0.0.287", "virtualenv==20.24.4", "pre-commit==3.4.0"]
